<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item

        android:id="@+id/latest"
        android:icon="@drawable/home"
        android:title="@string/latest" />

    <item
        android:id="@+id/category"
        android:icon="@drawable/categori"
        android:title="@string/category" />

    <item
        android:id="@+id/gifs"
        android:icon="@drawable/gif"
        android:title="@string/gifs" />

    <item
        android:id="@+id/myfavprites"
        android:icon="@drawable/my_fatori"
        android:title="@string/myfavorites" />



    <item
        android:id="@+id/rateapp"
        android:icon="@drawable/late"
        android:title="@string/rateapp" />

    <item
        android:id="@+id/moreapp"
        android:icon="@drawable/more"
        android:title="@string/moreapp" />
    <item
        android:id="@+id/aboutus"
        android:icon="@drawable/i"
        android:title="@string/aboutus" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/setting"
        android:title="@string/setting" />

    <item
        android:id="@+id/privacy"
        android:icon="@drawable/lock"
        android:title="@string/privacy" />

</menu>